[gd_scene load_steps=5 format=2]

[ext_resource path="res://settings.gd" type="Script" id=1]
[ext_resource path="res://play.png" type="Texture" id=2]
[ext_resource path="res://down.png" type="Texture" id=3]
[ext_resource path="res://up.png" type="Texture" id=4]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = 1.0
margin_right = 3.0
margin_bottom = 1.0
script = ExtResource( 1 )

[node name="MAX_QUEUE_COUNT" type="Label" parent="."]
margin_left = 69.0
margin_top = 44.0
margin_right = 207.0
margin_bottom = 72.0
text = "MAX_QUEUE_COUNT"

[node name="MAX_QUEUE_COUNT_value" type="Label" parent="."]
margin_left = 229.0
margin_top = 45.0
margin_right = 265.0
margin_bottom = 75.0
text = "0"

[node name="MAX_QUEUE_COUNT_add" type="Button" parent="."]
anchor_right = 0.009
anchor_bottom = 0.021
margin_left = 248.0
margin_top = 25.0
margin_right = 256.784
margin_bottom = 32.4
icon = ExtResource( 4 )
icon_align = 1

[node name="MAX_QUEUE_COUNT_minus" type="Button" parent="."]
anchor_right = 0.009
anchor_bottom = 0.021
margin_left = 248.0
margin_top = 53.0
margin_right = 256.0
margin_bottom = 60.0
icon = ExtResource( 3 )
icon_align = 1

[node name="MAX_QUEUE_TIME_add" type="Button" parent="."]
anchor_right = 0.009
anchor_bottom = 0.021
margin_left = 248.0
margin_top = 87.0
margin_right = 256.784
margin_bottom = 94.4
icon = ExtResource( 4 )
icon_align = 1

[node name="MAX_QUEUE_TIME_minus" type="Button" parent="."]
anchor_right = 0.009
anchor_bottom = 0.021
margin_left = 248.0
margin_top = 115.0
margin_right = 256.784
margin_bottom = 122.4
icon = ExtResource( 3 )
icon_align = 1

[node name="MAX_QUEUE_TIME" type="Label" parent="."]
margin_left = 69.0
margin_top = 107.0
margin_right = 207.0
margin_bottom = 135.0
text = "MAX_QUEUE_TIME"

[node name="MAX_QUEUE_TIME_value" type="Label" parent="."]
margin_left = 226.0
margin_top = 105.0
margin_right = 252.0
margin_bottom = 132.0
text = "0"

[node name="PLACE_COUNT_add" type="Button" parent="."]
anchor_right = 0.009
anchor_bottom = 0.021
margin_left = 249.0
margin_top = 142.0
margin_right = 257.784
margin_bottom = 149.4
icon = ExtResource( 4 )
icon_align = 1

[node name="PLACE_COUNT_minus" type="Button" parent="."]
anchor_right = 0.009
anchor_bottom = 0.021
margin_left = 250.0
margin_top = 173.0
margin_right = 258.784
margin_bottom = 180.4
icon = ExtResource( 3 )
icon_align = 1

[node name="PLACE_COUNT" type="Label" parent="."]
margin_left = 67.0
margin_top = 165.0
margin_right = 205.0
margin_bottom = 193.0
text = "PLACE_COUNT"

[node name="PLACE_COUNT_value" type="Label" parent="."]
margin_left = 219.0
margin_top = 164.0
margin_right = 243.0
margin_bottom = 191.0
text = "0"

[node name="REPAIR_TIME_add" type="Button" parent="."]
anchor_right = 0.009
anchor_bottom = 0.021
margin_left = 248.0
margin_top = 204.0
margin_right = 256.784
margin_bottom = 211.4
icon = ExtResource( 4 )
icon_align = 1

[node name="REPAIR_TIME_minus" type="Button" parent="."]
anchor_right = 0.009
anchor_bottom = 0.021
margin_left = 247.0
margin_top = 234.0
margin_right = 255.784
margin_bottom = 241.4
icon = ExtResource( 3 )
icon_align = 1

[node name="REPAIR_TIME" type="Label" parent="."]
margin_left = 68.0
margin_top = 216.0
margin_right = 206.0
margin_bottom = 244.0
text = "REPAIR_TIME"

[node name="REPAIR_TIME_value" type="Label" parent="."]
margin_left = 210.0
margin_top = 214.0
margin_right = 234.0
margin_bottom = 241.0
text = "0"

[node name="HAPPY_TIME_add" type="Button" parent="."]
anchor_right = 0.009
anchor_bottom = 0.021
margin_left = 249.0
margin_top = 382.0
margin_right = 257.784
margin_bottom = 389.4
icon = ExtResource( 4 )
icon_align = 1

[node name="HAPPY_TIME_minus" type="Button" parent="."]
anchor_right = 0.009
anchor_bottom = 0.021
margin_left = 248.0
margin_top = 413.0
margin_right = 266.784
margin_bottom = 422.4
icon = ExtResource( 3 )
icon_align = 1

[node name="HAPPY_TIME" type="Label" parent="."]
margin_left = 78.0
margin_top = 398.0
margin_right = 216.0
margin_bottom = 426.0
text = "HAPPY_TIME"

[node name="HAPPY_TIME_value" type="Label" parent="."]
margin_left = 202.0
margin_top = 396.0
margin_right = 226.0
margin_bottom = 423.0
text = "0"

[node name="GEN_TIME_add" type="Button" parent="."]
anchor_right = 0.009
anchor_bottom = 0.021
margin_left = 248.0
margin_top = 261.0
margin_right = 256.784
margin_bottom = 270.4
icon = ExtResource( 4 )
icon_align = 1

[node name="GEN_TIME_minus" type="Button" parent="."]
anchor_right = 0.009
anchor_bottom = 0.021
margin_left = 248.0
margin_top = 289.0
margin_right = 256.784
margin_bottom = 296.4
icon = ExtResource( 3 )
icon_align = 1

[node name="GEN_TIME" type="Label" parent="."]
margin_left = 65.0
margin_top = 278.0
margin_right = 203.0
margin_bottom = 306.0
text = "GEN_TIME"

[node name="GEN_TIME_value" type="Label" parent="."]
margin_left = 202.0
margin_top = 275.0
margin_right = 226.0
margin_bottom = 302.0
text = "0"

[node name="TARGET_THANKS_add" type="Button" parent="."]
anchor_right = 0.009
anchor_bottom = 0.021
margin_left = 250.0
margin_top = 319.0
margin_right = 258.784
margin_bottom = 328.4
icon = ExtResource( 4 )
icon_align = 1

[node name="TARGET_THANKS_minus" type="Button" parent="."]
anchor_right = 0.009
anchor_bottom = 0.021
margin_left = 247.0
margin_top = 347.0
margin_right = 255.784
margin_bottom = 354.4
icon = ExtResource( 3 )
icon_align = 1

[node name="TARGET_THANKS" type="Label" parent="."]
margin_left = 64.0
margin_top = 337.0
margin_right = 202.0
margin_bottom = 365.0
text = "TARGET_THANKS"

[node name="TARGET_THANKS_value" type="Label" parent="."]
margin_left = 195.0
margin_top = 334.0
margin_right = 216.0
margin_bottom = 360.0
text = "0"

[node name="TOTAL_THANKS_add" type="Button" parent="."]
anchor_right = 0.009
anchor_bottom = 0.021
margin_left = 249.0
margin_top = 441.0
margin_right = 267.784
margin_bottom = 450.4
icon = ExtResource( 4 )
icon_align = 1

[node name="TOTAL_THANKS_minus" type="Button" parent="."]
anchor_right = 0.009
anchor_bottom = 0.021
margin_left = 251.0
margin_top = 462.0
margin_right = 269.784
margin_bottom = 471.4
icon = ExtResource( 3 )
icon_align = 1

[node name="TOTAL_THANKS" type="Label" parent="."]
margin_left = 75.0
margin_top = 455.0
margin_right = 213.0
margin_bottom = 483.0
text = "TOTAL_THANKS"

[node name="TOTAL_THANKS_value" type="Label" parent="."]
margin_left = 221.0
margin_top = 451.0
margin_right = 242.0
margin_bottom = 476.0
text = "0"

[node name="PASSENGERS_LOST_ALLOWED_add" type="Button" parent="."]
anchor_right = 0.009
anchor_bottom = 0.021
margin_left = 238.0
margin_top = 491.0
margin_right = 256.784
margin_bottom = 500.4
icon = ExtResource( 4 )
icon_align = 1

[node name="PASSENGERS_LOST_ALLOWED_minus" type="Button" parent="."]
anchor_right = 0.009
anchor_bottom = 0.021
margin_left = 238.0
margin_top = 517.0
margin_right = 256.784
margin_bottom = 526.4
icon = ExtResource( 3 )
icon_align = 1

[node name="PASSENGERS_LOST_ALLOWED" type="Label" parent="."]
margin_left = 29.0
margin_top = 511.0
margin_right = 217.0
margin_bottom = 539.0
text = "PASSENGERS_LOST_ALLOWED"

[node name="PASSENGERS_LOST_ALLOWED_value" type="Label" parent="."]
margin_left = 224.0
margin_top = 513.0
margin_right = 245.0
margin_bottom = 539.0
text = "0"

[node name="PASSENGERS_LOST_add" type="Button" parent="."]
anchor_right = 0.009
anchor_bottom = 0.021
margin_left = 241.0
margin_top = 541.0
margin_right = 259.784
margin_bottom = 550.4
icon = ExtResource( 4 )
icon_align = 1

[node name="PASSENGERS_LOST_minus" type="Button" parent="."]
anchor_right = 0.009
anchor_bottom = 0.021
margin_left = 240.0
margin_top = 573.0
margin_right = 258.784
margin_bottom = 582.4
icon = ExtResource( 3 )
icon_align = 1

[node name="PASSENGERS_LOST" type="Label" parent="."]
margin_left = 64.0
margin_top = 557.0
margin_right = 202.0
margin_bottom = 585.0
text = "PASSENGERS_LOST"

[node name="PASSENGERS_LOST_value" type="Label" parent="."]
margin_left = 195.0
margin_top = 557.0
margin_right = 216.0
margin_bottom = 583.0
text = "0"

[node name="Play" type="Button" parent="."]
anchor_left = -0.104
anchor_right = -0.104
margin_left = -0.503998
margin_right = 61.496
margin_bottom = 56.0
icon = ExtResource( 2 )

[connection signal="pressed" from="MAX_QUEUE_COUNT_add" to="." method="_on_MAX_QUEUE_COUNT_add_pressed"]
[connection signal="pressed" from="MAX_QUEUE_COUNT_minus" to="." method="_on_MAX_QUEUE_COUNT_minus_pressed"]
[connection signal="pressed" from="MAX_QUEUE_TIME_add" to="." method="_on_MAX_QUEUE_TIME_add_pressed"]
[connection signal="pressed" from="MAX_QUEUE_TIME_minus" to="." method="_on_MAX_QUEUE_TIME_minus_pressed"]
[connection signal="pressed" from="PLACE_COUNT_add" to="." method="_on_PLACE_COUNT_add_pressed"]
[connection signal="pressed" from="PLACE_COUNT_minus" to="." method="_on_PLACE_COUNT_minus_pressed"]
[connection signal="pressed" from="REPAIR_TIME_add" to="." method="_on_REPAIR_TIME_add_pressed"]
[connection signal="pressed" from="REPAIR_TIME_minus" to="." method="_on_REPAIR_TIME_minus_pressed"]
[connection signal="pressed" from="HAPPY_TIME_add" to="." method="_on_HAPPY_TIME_add_pressed"]
[connection signal="pressed" from="HAPPY_TIME_minus" to="." method="_on_HAPPY_TIME_minus_pressed"]
[connection signal="pressed" from="GEN_TIME_add" to="." method="_on_GEN_TIME_add_pressed"]
[connection signal="pressed" from="GEN_TIME_minus" to="." method="_on_GEN_TIME_minus_pressed"]
[connection signal="pressed" from="TARGET_THANKS_add" to="." method="_on_TARGET_THANKS_add_pressed"]
[connection signal="pressed" from="TARGET_THANKS_minus" to="." method="_on_TARGET_THANKS_minus_pressed"]
[connection signal="pressed" from="TOTAL_THANKS_add" to="." method="_on_TOTAL_THANKS_add_pressed"]
[connection signal="pressed" from="TOTAL_THANKS_minus" to="." method="_on_TOTAL_THANKS_minus_pressed"]
[connection signal="pressed" from="PASSENGERS_LOST_ALLOWED_add" to="." method="_on_PASSENGERS_LOST_ALLOWED_add_pressed"]
[connection signal="pressed" from="PASSENGERS_LOST_ALLOWED_minus" to="." method="_on_PASSENGERS_LOST_ALLOWED_minus_pressed"]
[connection signal="pressed" from="PASSENGERS_LOST_add" to="." method="_on_PASSENGERS_LOST_add_pressed"]
[connection signal="pressed" from="PASSENGERS_LOST_minus" to="." method="_on_PASSENGERS_LOST_minus_pressed"]
[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
